# orpheus-api

./: gguf_orpheus.py  openai_api.py  plan.md  pyproject.toml  stream_test.html
orpheus_tts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
